--- a/.gitignore
+++ b/.gitignore
@@ -4,40 +4,28 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
 venv/
 ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
+env/
 *.egg-info/
-.installed.cfg
-*.egg
-
-# Backend
-backend/.env
-backend/dtaas.db
-backend/celerybeat-schedule
+dist/
+build/
 
 # Node
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+dist/
+.nuxt/
+.cache/
 
-# Frontend
-frontend/dist/
-frontend/.vite/
+# Environment
+.env
+.env.local
+.env.production
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
 
 # IDE
 .vscode/
@@ -52,9 +40,16 @@ Thumbs.db
 
 # Logs
 *.log
+logs/
 
-# Environment
-.env
-.env.local
-.env.*.local
+# Test
+.pytest_cache/
+coverage/
+.coverage
 
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# Docker
+.dockerignore
