--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,22 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "axios": "^1.6.2",
-    "@vueflow/core": "^1.26.0",
-    "@vueflow/background": "^1.3.0",
-    "@vueflow/controls": "^1.1.1",
-    "@vueflow/minimap": "^1.3.0",
-    "element-plus": "^2.4.3",
     "@element-plus/icons-vue": "^2.3.1",
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/controls": "^1.1.3",
+    "@vue-flow/core": "^1.26.0",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.0",
-    "vue-chartjs": "^5.2.0"
+    "element-plus": "^2.4.3",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.8",
+    "vue-chartjs": "^5.2.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
     "vite": "^5.0.4"
   }
 }
-
