--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
+sqlalchemy==1.4.51
 alembic==1.12.1
 pydantic==2.5.0
 pydantic-settings==2.1.0
@@ -9,8 +9,20 @@ celery==5.3.4
 redis==5.0.1
 
 # Database Drivers
+# SQL Server
 pyodbc==5.0.1
 pymssql==2.2.11
+
+# PostgreSQL
+psycopg2-binary==2.9.9
+
+# MySQL
+mysql-connector-python==8.2.0
+
+# Oracle
+cx-Oracle==8.3.0
+
+# Snowflake
 snowflake-connector-python==3.5.0
 snowflake-sqlalchemy==1.5.1
 
