--- a/.gitignore
+++ b/.gitignore
@@ -4,28 +4,27 @@ __pycache__/
 *$py.class
 *.so
 .Python
+build/
+develop-eggs/
+dist-python/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environment
 venv/
 ENV/
 env/
-*.egg-info/
-dist/
-build/
-
-# Node
-node_modules/
-dist/
-.nuxt/
-.cache/
-
-# Environment
-.env
-.env.local
-.env.production
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
 
 # IDE
 .vscode/
@@ -33,23 +32,56 @@ dist/
 *.swp
 *.swo
 *~
-
-# OS
 .DS_Store
-Thumbs.db
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+test_dtaas.db
+
+# Testing
+.coverage
+htmlcov/
+.pytest_cache/
+coverage.xml
+.tox/
 
 # Logs
 *.log
 logs/
 
-# Test
-.pytest_cache/
-coverage/
-.coverage
+# PyInstaller
+backend/build/
+backend/dist/
+*.spec.bak
 
-# Celery
-celerybeat-schedule
-celerybeat.pid
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Docker
-.dockerignore
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.swp
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Build artifacts
+backend/frontend/
+dist/*.db
+dist/*.txt
+
+# Keep the executable
+!dist/dtaas.exe
+!dist/dtaas
